Probando Refactorizacion